--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "nodemon server.js",
+    "dev": " yarn build:css & nodemon server.js",
+    "build:css": "postcss public/css/tailwind.css -o public/css/style.css",
     "start": "node server.js"
   },
   "keywords": [],
@@ -16,5 +17,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.4"
+  },
+  "devDependencies": {
+    "tailwindcss": "^1.4.6"
   }
 }
