--- a/package.json
+++ b/package.json
@@ -6,17 +6,19 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": " yarn build:css & nodemon server.js",
-    "build:css": "postcss public/css/tailwind.css -o public/css/style.css",
+    "build:css": "postcss public/css/tailwind.css -o public/css/styles.css",
     "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^9.8.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "postcss-cli": "^7.1.1"
   },
   "devDependencies": {
     "tailwindcss": "^1.4.6"
